--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
   margin: 0;
 }
 
-
 body::before {
   content: '';
   position: fixed;
@@ -34,13 +33,12 @@ body::before {
   background: var(--color-darkblue);
   background-image: linear-gradient(
       115deg,
-      rgba(58, 58, 158, 0.8),
-      rgba(136, 136, 206, 0.7)
-    ),
-   
-  background-size: cover;
+      rgba(58,58,158,0.8),
+      rgba(136,136,206,0.7),
+   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  );
 }
 
 h1 {
