--- a/style.css
+++ b/style.css
@@ -31,14 +31,15 @@ body::before {
   width: 100%;
   z-index: -1;
   background: var(--color-darkblue);
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       115deg,
-      rgba(58,58,158,0.8),
-      rgba(136,136,206,0.7),
-   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  );
+      rgba(58, 58, 158, 0.8),
+      rgba(136, 136, 206, 0.7),
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+    );
 }
 
 h1 {
